annotation processor fixes